Change  server implemtation from c_glib to c++

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -7,8 +7,8 @@ find_package(PkgConfig)
 pkg_check_modules(thrift REQUIRED thrift_c_glib)
 
 add_executable(${PROJECT_NAME} main.c
-                               ../gen-c_glib/my_types.c
-                               ../gen-c_glib/hello_svc.c)
+                               gen-c_glib/my_types.c
+                               gen-c_glib/hello_svc.c)
 
 target_link_libraries(${PROJECT_NAME} ${thrift_LIBRARIES})
 
