--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -1,14 +1,14 @@
 project(server)
 
-set(CMAKE_C_STANDARD 11)
-set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(PkgConfig)
-pkg_check_modules(thrift REQUIRED thrift_c_glib)
+pkg_check_modules(thrift REQUIRED thrift)
 
-add_executable(${PROJECT_NAME} main.c
-                               ../gen-c_glib/my_types.c
-                               ../gen-c_glib/hello_svc.c)
+add_executable(${PROJECT_NAME} main.cpp
+                               gen-cpp/my_types.cpp
+                               gen-cpp/helloSvc.cpp)
 
 target_link_libraries(${PROJECT_NAME} ${thrift_LIBRARIES})
 
